# tcg-ar

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt  settings.example.yaml
assets/database/: wrong_scan_cards.json
assets/deck list/: deck Dragon.txt  (+4 more)
core/: __init__.py  config.py  databases.py  image_ops.py  real_data.py  shared_memory.py  training_utils.py  transforms.py
docs/: DATA.md
evaluation/: __init__.py  analyze_identification_errors.py  eval_detection.py  eval_identification.py  eval_orientation.py
inference/: __init__.py  annotate_identities.py  caster_module.py  generate_ui_assets.py  identification_pipe.py  io_module.py  main.py  registration_module.py  render_module.py  rendering_3d.py  style.py  user_interface.py
installation/: __init__.py  find_wrong_scans.py  install.py
installer/: README.md  TCG-AR.iss  bootstrap.ps1  build.ps1  tailer.ps1  update_carddb.ps1
scripts/: clear_embedding_cache.py  download_assets.py  patch_mmlibs.py
tests/: __init__.py  bench_loader.py  broadcast_gui_smoke.py  caster_cache_check.py  caster_filter_check.py  deck_two_player_check.py  pipeline_bench.py  profile_trainstep.py  profile_triplet.py  render_cache_check.py  side_panel_nonpokemon_check.py  sprite_render_check.py  stream_selection_check.py  sv_sprite_check.py  test_card_db_equiv.py  test_caster.py  test_identify_equiv.py  test_logic.py  test_validate_equiv.py  throughput_bench.py
training/: __init__.py  make_detection_configs.py  train_detection.py  train_identification.py  train_orientation.py
(+159 files in other folders)
