[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcg-ar"
version = "1.0.0"
description = "Markerless augmented-reality pipeline for the Pokemon Trading Card Game"
readme = "README.md"
requires-python = ">=3.11"

# NOTE: the heavy native dependencies (torch+cu118, mmcv-full, mmdet, mmrotate)
# are NOT installable from PyPI in a portable way -- see README.md / requirements.txt
# for the manual setup.  Only the pure-python extras are listed here.
dependencies = [
    "beautifulsoup4",
    "imageio",
    "imageio-ffmpeg",
    "mediamtx-py",
    "opencv-python",
    "pokemontcgsdk",
    "PySide6",
    "PyYAML",
    "tqdm",
    "matplotlib",
    "requests",
]

[tool.setuptools]
packages = ["core", "core.models"]
